version/0.4/_sources/api/ansys/rocky/core/_api_stubs/rocky30/plugins/api/ra_fluid_inlet/RAFluidInlet.rst.txt






:class:`RAFluidInlet`
=====================


.. py:class:: ansys.rocky.core._api_stubs.rocky30.plugins.api.ra_fluid_inlet.RAFluidInlet(id: str, model_id: Optional[str] = ...)

   Bases: :py:obj:`ansys.rocky.core._api_stubs.plugins10.plugins.api.api_element_item.ApiElementItem`





.. py:currentmodule:: RAFluidInlet

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~GetWrappedClass`
            - 
          * - :py:attr:`~GetClassName`
            - 


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~GetBoundaryCondition`
            - 
          * - :py:attr:`~SetBoundaryCondition`
            - 
          * - :py:attr:`~GetValidBoundaryConditionValues`
            - 
          * - :py:attr:`~GetMassFlowRate`
            - 
          * - :py:attr:`~SetMassFlowRate`
            - 
          * - :py:attr:`~GetName`
            - 
          * - :py:attr:`~SetName`
            - 
          * - :py:attr:`~GetStartTime`
            - 
          * - :py:attr:`~SetStartTime`
            - 
          * - :py:attr:`~GetStopTime`
            - 
          * - :py:attr:`~SetStopTime`
            - 
          * - :py:attr:`~GetTemperature`
            - 
          * - :py:attr:`~SetTemperature`
            - 
          * - :py:attr:`~GetVelocity`
            - 
          * - :py:attr:`~SetVelocity`
            - 
          * - :py:attr:`~GetEntryPoint`
            - 
          * - :py:attr:`~SetEntryPoint`
            - 
          * - :py:attr:`~GetAvailableEntryPoints`
            - 








Import detail
-------------

.. code-block:: python

    from ansys.rocky.core._api_stubs.rocky30.plugins.api.ra_fluid_inlet import RAFluidInlet



Method detail
-------------

.. py:method:: GetWrappedClass() -> type[rocky30.models.input.sph_inlet.SPHInlet]
   :classmethod:


.. py:method:: GetClassName() -> str
   :classmethod:


.. py:method:: GetBoundaryCondition() -> str

.. py:method:: SetBoundaryCondition(value: str) -> None

.. py:method:: GetValidBoundaryConditionValues() -> List[str]

.. py:method:: GetMassFlowRate(unit: Optional[str] = ...) -> float

.. py:method:: SetMassFlowRate(value: Union[str, float], unit: Optional[str] = ...) -> None

.. py:method:: GetName() -> str

.. py:method:: SetName(value: str) -> None

.. py:method:: GetStartTime(unit: Optional[str] = ...) -> float

.. py:method:: SetStartTime(value: Union[str, float], unit: Optional[str] = ...) -> None

.. py:method:: GetStopTime(unit: Optional[str] = ...) -> float

.. py:method:: SetStopTime(value: Union[str, float], unit: Optional[str] = ...) -> None

.. py:method:: GetTemperature(unit: Optional[str] = ...) -> float

.. py:method:: SetTemperature(value: Union[str, float], unit: Optional[str] = ...) -> None

.. py:method:: GetVelocity(unit: Optional[str] = ...) -> float

.. py:method:: SetVelocity(value: Union[str, float], unit: Optional[str] = ...) -> None

.. py:method:: GetEntryPoint()

.. py:method:: SetEntryPoint(value) -> None

.. py:method:: GetAvailableEntryPoints()




